--- a/list.html
+++ b/list.html
@@ -92,8 +92,9 @@
         let div =  document.querySelector(".local.model").cloneNode(true);
 
         div.classList.remove("model");
-        div.querySelector("#name").innerHTML = `${local.name} (${local.user_ratings_total}) `;
+        div.querySelector("#name").innerHTML = `${local.name} <small>${local.rating}&#11088; (${local.user_ratings_total}) </small>`;
         div.querySelector("#direccion").innerHTML = local.formatted_address;
+        div.querySelector("#enlace").href = `https://plus.codes/${local.plus_code.global_code}`;
 
         document.querySelector("#list").appendChild(div);
 
